--- a/Bold/index.html
+++ b/Bold/index.html
@@ -6,7 +6,7 @@
 <style>
   @font-face {
     font-family: 'LCD';
-    src: url('../fonts/DSEG7Classic-Bold.woff2') format('woff2');
+    src: url('./fonts/DSEG7Classic-Bold.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
   }
