优化LCD时钟居中显示及字体路径

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   }
 
   .lcd-clock {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     font-family: 'LCD', monospace;
     font-size: 128px; /* 字体大小 */
     color: white;
