--- a/Bold/index.html
+++ b/Bold/index.html
@@ -6,12 +6,16 @@
 <style>
   @font-face {
     font-family: 'LCD';
-    src: url('./fonts/DSEG7Classic-Bold.woff2') format('woff2');
+    src: url('../fonts/DSEG7Classic-Bold.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
   }
 
   .lcd-clock {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     font-family: 'LCD', monospace;
     font-size: 128px; /* 字体大小 */
     color: white;
