--- a/30ma.html
+++ b/30ma.html
@@ -28,11 +28,19 @@
     text-shadow: 0 0 5px #000, 0 0 10px #000, 0 0 15px #000, 0 0 20px #fff;
     display: none; /* 默认隐藏时钟 */
   }
+  
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
 </style>
 </head>
 <body>
 
-<div class="lcd-clock" id="clock">00:00:00</div>
+<div class="container"><div class="lcd-clock" id="clock">00:00:00</div></div>
+
 
 <script>
 function updateClock() {
