--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
     color: white;
     text-shadow: 0 0 5px #000, 0 0 10px #000, 0 0 15px #000, 0 0 20px #fff;
   }
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
 </style>
 </head>
 <body>
 
-<div class="lcd-clock" id="clock">00:00:00</div>
+<div class="container"><div class="lcd-clock" id="clock">00:00:00</div></div>
 
 <script>
 function updateClock() {
